# mtocl-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: example1.py  example1_population.csv  example1a.py  example2.py  example2_A_dPhi=0.20_Rs=10_best_population.csv  example2_B_dPhi=0.50_Rs=10_best_population.csv  example2_C_dPhi=0.20_Rs=120_best_population.csv  example2_D_dPhi=0.50_Rs=220_best_population.csv  example2_multiseed.csv  example2_summary.csv  example2_tmp_seed_11.csv  example2_tmp_seed_17.csv  example2_tmp_seed_23.csv  example2_tmp_seed_29.csv  example2_tmp_seed_35.csv  example2_tmp_seed_41.csv
loses/: loses01.ipynb  loss01.py  loss02.py
source/: __init__.py
src/mtocl_optimizer/: __init__.py  config.py  losses.py  objectives.py  optimizer.py
tests/: test_config.py  test_objectives.py  test_optimizer_smoke.py
