[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtocl-optimizer"
version = "0.1.0"
description = "Mother Tree Optimization with Climate Change (MTO-CL) for global optimization."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.20.0",
  "pandas>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mtocl_optimizer*"]
