[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtocl-optimizer"
version = "0.0.1"
description = "A Python implementation of the Mother Tree Optimization with Climate Change (MTO-CL) global optimization algorithm."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "MTO-CL Optimizer Contributors" }
]
dependencies = [
  "numpy",
  "pandas",
]
keywords = ["optimization", "metaheuristic", "mother-tree", "mto-cl", "global-optimization"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/your-org/mtocl-optimizer"
Repository = "https://github.com/your-org/mtocl-optimizer"
Issues = "https://github.com/your-org/mtocl-optimizer/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mtocl_optimizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py39"
